# bedrock-echo

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROTOCOL.md  README.md  VALIDATION.md  bedrock-echo-design.md
crates/bedrock-echo-proto/: Cargo.toml
crates/bedrock-echo-proto/src/: constants.rs  crypto.rs  header.rs  lib.rs  msg.rs
crates/bedrock-echo-proto/tests/: test_vectors.rs
crates/bedrock-echo-witness/: Cargo.toml
crates/bedrock-echo-witness/src/: handler.rs  lib.rs  main.rs  mdns.rs  state.rs
crates/bedrock-echo-witness/tests/: test_state_machine.rs
docs/: bedrock-cluster-log.md  design-notes.md  witness-implementation.md
docs/adoption/: README.md
docs/phase-reviews/: final-review.md  phase-1-python.md  phase-2-rust.md  phase-3-c-esp32.md  phase-4-interop.md  post-polish.md  post-v1-polish.md
firmware/esp32-c/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/esp32-c/main/: CMakeLists.txt  bew1.h  bew1_crypto.c  bew1_eth.c  bew1_eth.h  bew1_handler.c  bew1_info.c  bew1_info.h  bew1_key.c  bew1_proto.c  bew1_state.c  echo.h  echo_crypto.c  echo_eth.c  echo_eth.h  echo_handler.c  echo_info.c  echo_info.h  echo_key.c  echo_mdns.c  echo_mdns.h  echo_proto.c  echo_state.c  idf_component.yml  main.c
harness/: data_integrity.sh  scenarios.py  stress_links.sh
python/echo/: __init__.py  crypto.py  node.py  proto.py  witness.py
python/node/: __init__.py  daemon.py  effects.py  main.py
python/tests/: test_end_to_end.py  test_interop_live.py  test_node_daemon.py  test_protocol.py  test_vectors.py  test_witness.py
python/tools/: gen_testvectors.py
testvectors/: 01_heartbeat_list_query.in.json  02_heartbeat_detail_query.in.json  03_heartbeat_self_query.in.json  03_status_list_two_nodes.in.json  04_status_detail_found.in.json  04_status_list_two_nodes.in.json  05_status_detail_not_found.in.json  05_status_list_empty.in.json  06_status_detail_found.in.json  06_unknown_source.in.json  07_bootstrap.in.json  07_status_detail_not_found.in.json  08_bootstrap_ack_new.in.json  08_discover.in.json  09_bootstrap_ack_rebootstrap.in.json  09_init.in.json  09_unknown_source.in.json  10_bootstrap.in.json  11_bootstrap_ack_new.in.json  12_bootstrap_ack_rebootstrap.in.json  MANIFEST  generate.py
vms/: deploy_node.sh  deploy_pilot.sh  provision.py
vms/cloud-init/: meta-data.tmpl  node.user-data.tmpl  witness.user-data.tmpl
vms/drbd/: bec-r0.res  setup-drbd.sh
vms/networks/: bec-link2.xml
