[workspace]
resolver = "2"
members = [
    "crates/bedrock-echo-proto",
    "crates/bedrock-echo-witness",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Bedrock Echo"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
