[package]
name = "bedrock-echo-witness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bedrock Echo witness — Linux UDP binary"

[dependencies]
bedrock-echo-proto = { path = "../bedrock-echo-proto" }
rand_core = { version = "0.6", features = ["std", "getrandom"] }
sha2 = { version = "0.10", default-features = false }

[features]
default = []
