[package]
name = "bedrock-echo-witness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bedrock Echo witness — Linux UDP binary"

[dependencies]
bedrock-echo-proto = { path = "../bedrock-echo-proto" }
rand_core = { version = "0.6", features = ["std", "getrandom"] }
heapless = "0.8"

[features]
default = []
