idf_component_register(
    SRCS
        "main.c"
        "echo_crypto.c"
        "echo_proto.c"
        "echo_state.c"
        "echo_handler.c"
        "echo_eth.c"
        "echo_info.c"
        "echo_key.c"
        "echo_mdns.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_eth
        esp_netif
        esp_event
        nvs_flash
        lwip
        mbedtls
        driver
        mdns
    PRIV_REQUIRES
        esp_timer
        bootloader_support
)
